# Projeto-Modular-24.1

./: .gitignore  README.md  ToDo.txt  lista_de_espera  pyproject.toml
.circleci/: config.yaml  config.yml
.github/workflows/: python-app.yml  python-publish.yml
.venv./: pyvenv.cfg
project/: main.py  util.py  utils.py
project/blueprints/aluno/: aluno.py  alunoRepo.py  alunoService.py
project/blueprints/avaliacao/: avaliacao.py  avaliacaoRepo.py  avaliacaoService.py
project/blueprints/certificacao/: certificacao.py  certificacaoRepo.py  certificacaoService.py
project/blueprints/curso/: curso.py  cursoRepo.py  cursoService.py
project/blueprints/filial/: filial.py  filialRepo.py  filialService.py  turmasFIlialService.py
project/blueprints/formacao/: formacao.py  formacaoRepo.py  formacaoService.py
project/blueprints/lista_de_espera/: listaDeEsperaRepo.py  listaDeEsperaService.py  lista_de_espera.py
project/blueprints/principal/: principal.py  principalRepo.py  principalService.py
project/blueprints/professor/: professor.py  professorRepo.py  professorService.py
project/blueprints/turma/: matriculaService.py  turma.py  turmaRepo.py  turmaService.py
project/db/: database.py
project/static/curso/: curso.css  curso_atualizar.css  curso_criar.css
project/static/lista_espera/: lista_espera.css
project/templates/: main.html
project/templates/aluno/: aluno.html  (+6 more)
tests/: test_certificacaoService.py
tests/unit/: test_crud_filial.py  test_db_funcs.py  test_defturmas_filial.py  test_filial.py  test_lista_espera.py  test_principal.py  test_routes.py
(+53 files in other folders)
